[project]
name = "trace-transactional-risk-analysis-compliance-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "seaborn>=0.12.0",
]
